force-app/main/default/objects/purecloud__Omni_Channel_Status_Mapping__c/purecloud__Omni_Channel_Status_Mapping__c.object-meta.xml
<CustomObject>
    <label>Omni-Channel Status Mapping</label>
    <nameField>
        <label>Omni-Channel Status Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Omni-Channel Status Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>