force-app/main/default/objects/purecloud__Omni_Channel_Status_Mapping__c/fields/purecloud__PureCloud_Status_Name__c.field-meta.xml
<CustomField>
    <fullName>purecloud__PureCloud_Status_Name__c</fullName>
    <label>Genesys Cloud Status Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>