force-app/main/default/objects/purecloud__Omni_Channel_Status_Mapping__c/fields/purecloud__Salesforce_Status_Id__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Salesforce_Status_Id__c</fullName>
    <label>Salesforce Status Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>