force-app/main/default/objects/purecloud__Omni_Channel_Status_Mapping__c/fields/purecloud__Sync_Direction__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Sync_Direction__c</fullName>
    <label>Sync Direction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>