force-app/main/default/objects/purecloud__Omni_Channel_Status_Mapping__c/fields/purecloud__Sync_on_Transition__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Sync_on_Transition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync on Transition</label>
    <type>Checkbox</type>
</CustomField>